[gd_scene load_steps=7 format=3 uid="uid://8rx13ttaug03"]

[ext_resource type="PackedScene" uid="uid://bc68rxh8klkr8" path="res://Scenes/row.tscn" id="1_jq83f"]
[ext_resource type="Script" path="res://Scripts/rows_controller.gd" id="1_uxh67"]
[ext_resource type="PackedScene" uid="uid://g0o5v2au4mu6" path="res://Scenes/keyboard.tscn" id="2_ourp0"]
[ext_resource type="Script" path="res://Scripts/word_pool.gd" id="3_jpfyx"]
[ext_resource type="PackedScene" uid="uid://hvktusc5e24g" path="res://Scenes/validation_alert.tscn" id="5_7k3cw"]
[ext_resource type="PackedScene" uid="uid://b4frixfo5cdyn" path="res://Scenes/results_ui.tscn" id="6_vmskq"]

[node name="main" type="Node"]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Rows" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
script = ExtResource("1_uxh67")

[node name="Row" parent="MarginContainer/VBoxContainer/CenterContainer/Rows" instance=ExtResource("1_jq83f")]
layout_mode = 2

[node name="Row2" parent="MarginContainer/VBoxContainer/CenterContainer/Rows" instance=ExtResource("1_jq83f")]
layout_mode = 2

[node name="Row3" parent="MarginContainer/VBoxContainer/CenterContainer/Rows" instance=ExtResource("1_jq83f")]
layout_mode = 2

[node name="Row4" parent="MarginContainer/VBoxContainer/CenterContainer/Rows" instance=ExtResource("1_jq83f")]
layout_mode = 2

[node name="Row5" parent="MarginContainer/VBoxContainer/CenterContainer/Rows" instance=ExtResource("1_jq83f")]
layout_mode = 2

[node name="Keyboard" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_ourp0")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="WordPool" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_jpfyx")

[node name="ValidationAlert" parent="." instance=ExtResource("5_7k3cw")]
unique_name_in_owner = true
visible = true

[node name="ResultsUI" parent="." instance=ExtResource("6_vmskq")]
unique_name_in_owner = true
win_color = Color(0, 0.715509, 0, 1)
lose_color = Color(1, 0.245241, 0.187845, 1)

[connection signal="backspace_pressed" from="MarginContainer/VBoxContainer/Keyboard" to="MarginContainer/VBoxContainer/CenterContainer/Rows" method="_on_keyboard_backspace_pressed"]
[connection signal="enter_pressed" from="MarginContainer/VBoxContainer/Keyboard" to="MarginContainer/VBoxContainer/CenterContainer/Rows" method="_on_keyboard_enter_pressed"]
[connection signal="letter_pressed" from="MarginContainer/VBoxContainer/Keyboard" to="MarginContainer/VBoxContainer/CenterContainer/Rows" method="_on_keyboard_letter_pressed"]
